# advent_of_code

./: .clang-format  .gitignore  README.md
.nvim/: nvim-dap.lua
2023/day03/src/: main.rs
2023/day04/src/: main.rs
2023/day05_p1/src/: main.rs
2023/day05_p2/: Cargo.toml
2023/day05_p2/src/: main.rs
2023/day06_p1/src/: main.rs
2023/day06_p2/: Cargo.toml
2023/day08_p1/src/: main.rs
2023/day09_p1/: Cargo.toml
2023/day09_p2/: Cargo.toml
2023/day10_p1/: Cargo.toml
2023/day10_p2/src/: main.rs
2023/day11_p1/src/: main.rs
2023/day11_p2/src/: main.rs
2023/day12_p1/src/: regex.rs
2024/day01/part1/: CMakeLists.txt  run.sh
2024/day01/part2/: CMakeLists.txt  run.sh
2024/day02/part1/: CMakeLists.txt  run.sh
2024/day02/part2/: CMakeLists.txt  run.sh
2024/day03/part1/: run.sh
2024/day03/part2/: CMakeLists.txt
2024/day04/part1/: CMakeLists.txt
2024/day04/part2/: CMakeLists.txt  run.sh
2024/day05/part1/: CMakeLists.txt  build_and_run.sh
2024/day05/part2/: run.sh
2024/day06/part1/: CMakeLists.txt
2024/day06/part2/: CMakeLists.txt  run.sh
aoc2023/: Cargo.toml
aoc2023/day01/src/: main.rs
aoc2023/day07_p2/: Cargo.toml
aoc2023/day10_p2/: Cargo.toml
aoc2023/day11_p1/: Cargo.toml
aoc2023/day11_p2/: Cargo.toml
aoc2023/day12_p1/: Cargo.toml
aoc2023/day12_p2/: Cargo.toml
aoc2023/day5_p1/: Cargo.toml
aoc2023/day6_p1/: Cargo.toml
aoc2023/day7_p1/: Cargo.toml
aoc2023/day8_p1/: Cargo.toml
aoc2023/day8_p2/: Cargo.toml
aoc2023/src/: day1.rs
aoc2024/day03/part1/: CMakeLists.txt
aoc2024/day03/part1/src/: main.c
(+43 files in other folders)
